#22 - Add Product Service ✏️📗🐳🐧

--- a/category-service/src/main/resources/application.yml
+++ b/category-service/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
       ddl-auto: update
       connection:
         provider_class: "com.zaxxer.hikari.hibernate.HikariConnectionProvider"
-    show-sql: false
+    show-sql: true
 controller:
   api:
     create: /api/v1/save
