--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-slim
+FROM bellsoft/liberica-openjdk-debian:21
 ENV APP_FILE gateway-service-1.0.jar
 ENV APP_HOME /usr/apps
 EXPOSE 80
