--- a/category-service/pom.xml
+++ b/category-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.hendisantika</groupId>
 	<artifactId>category-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>category-service</name>
 	<description>category-service</description>
 	<properties>
